fixed an issue with installing grails component only without groovy-eclipse involved

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -717,6 +717,9 @@
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.3"> -->
 <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.3"> -->
+         <iu id="org.grails.ide.eclipse" />
+         <iu id="org.codehaus.groovy.eclipse.feature" />
+         <iu id="org.codehaus.groovy.jdt.patch" />
          <icon
                image32="images/grails_32.png">
          </icon>
