--- a/org.springsource.ide.eclipse.discovery/plugin.properties
+++ b/org.springsource.ide.eclipse.discovery/plugin.properties
@@ -33,12 +33,8 @@ vmforce.description=The integration supports deploying of projects and managing 
 
 datanucleus.description=Introducing DataNucleus, a Java data persistence, analysis and management platform. Our scope is to provide a series of products to cover the whole Java data access, analysis and overall management domain. We build our products using a plugin-based architecture leading to shorter time to market and improved testability of components.
 
-cloudfoundry.description=The industry's first open platform as a service. Run your Spring, Rails and Node.js applications. Deploy from your IDE or command line.\n\
+cloudfoundry.description=The industry's first open platform as a service initiated by Pivotal. Deploy your Java Web, Spring Boot, Grails, and Java applications from STS to a Cloud Foundry organization and space.\n\
 \n\
-Cloud Foundry is the open platform as a service project initiated by VMware. It can support multiple frameworks, multiple cloud providers, and multiple application services all on a cloud scale platform.\n\
+Open System - Define your own buildpack, choose your Cloud, select services, scale memory and application instances.\n\
 \n\
-Developer Productivity — Build applications with your choice of high productivity frameworks and application services.\n\
-\n\
-Open System — Choose your framework, choose your cloud, choose your application services.\n\
-\n\
-Faster Delivery — Shorten the time it takes to take your application from concept, to code, to the cloud using an open platform as a service.
+Faster Delivery - Shorten the time to take your application from concept, to code, to a Cloud using an open platform as a service. Easily migrate from one Cloud space to another.
