updated to new company name and tc-server 3.0.0 changes

--- a/org.springsource.ide.eclipse.discovery/plugin.properties
+++ b/org.springsource.ide.eclipse.discovery/plugin.properties
@@ -1,5 +1,5 @@
-%pluginName=SpringSource Tool Suite Discovery Directory
-%providerName=SpringSource
+%pluginName=Spring Tool Suite Discovery Directory
+%providerName=Pivotal Software, Inc.
 
 eclemma.description=EclEmma is a free Java code coverage tool for Eclipse, available under the Eclipse Public License. Internally it is based on the great EMMA Java code coverage tool, trying to adopt EMMA's philosophy for the Eclipse workbench:\n\
 \n\
@@ -27,7 +27,7 @@ The SpringSource dm Server is based on the new SpringSource Dynamic Module Kerne
 
 tcserver.description=Apache Tomcat is the world's most widely used Java application server. Spring is the leading enterprise Java programming model. Developers find the lean and powerful combination of Tomcat and Spring a natural fit that keeps their application code free of needless Java EE complexity.\n\
 \n\
-SpringSource tc Server Developer Edition enhances Apache Tomcat to provide Java developers unparalleled insight into the performance and behavior of their Spring applications.
+Pivotal tc Server Developer Edition enhances Apache Tomcat to provide Java developers unparalleled insight into the performance and behavior of their Spring applications.
 
 vmforce.description=The integration supports deploying of projects and managing of VMforce deployments.
 
