--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -734,7 +734,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Grails Support"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.7">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7"> -->
@@ -757,7 +757,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Grails Support"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.8">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8"> -->
@@ -780,7 +780,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Grails Support"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.2">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2"> -->
@@ -803,7 +803,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Grails Support"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.3">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3"> -->
@@ -829,7 +829,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Grails Support"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
@@ -857,7 +857,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Gradle Support"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.6.0)(platform.version&lt;=3.7.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.7">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7"> -->
@@ -880,7 +880,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Gradle Support"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.8">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8"> -->
@@ -903,7 +903,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Gradle Support"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.2">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2"> -->
@@ -926,7 +926,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Gradle Support"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.3">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3"> -->
@@ -949,7 +949,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Gradle Support"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
@@ -974,7 +974,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Spring IDE"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.7">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7"> -->
@@ -1007,7 +1007,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Spring IDE"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.8">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8"> -->
@@ -1040,7 +1040,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Spring IDE"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.2">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2"> -->
@@ -1073,7 +1073,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Spring IDE"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.3">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3"> -->
@@ -1106,7 +1106,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Spring IDE"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
@@ -1141,7 +1141,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Spring IDE - Roo Extension"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.7">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7"> -->
@@ -1163,7 +1163,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Spring IDE - Roo Extension"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.8">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8"> -->
@@ -1185,7 +1185,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Spring IDE - Roo Extension"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.2">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2"> -->
@@ -1207,7 +1207,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Spring IDE - Roo Extension"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.3">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3"> -->
@@ -1229,7 +1229,7 @@
             groupId="certified"
             license="Free, EPL"
             name="Spring IDE - Roo Extension"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
@@ -1252,7 +1252,7 @@
             groupId="certified"
             license="Free, GPL v3"
             name="Spring Roo (current production release)"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(com.springsource.sts.version&gt;=2.5.1)"
             siteUrl="http://download.springsource.com/release/TOOLS/extensions/sts360">
          <icon
@@ -1478,14 +1478,14 @@
             kind="task"
             license="Commercial"
             name="Pivotal tc Server Developer Edition"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             siteUrl="http://download.springsource.com/release/TOOLS/extensions/sts360">
          <icon
                image32="images/spring.png">
          </icon>
          <overview
                summary="%tcserver.description"
-               url="http://www.springsource.com/products/tcserver/devedition">
+               url="http://www.pivotal.io/products/pivotal-tc-server">
          </overview>
       </connectorDescriptor>
 
@@ -1496,7 +1496,7 @@
             kind="task"
             license="Free, EPL"
             name="Pivotal tc Server Integration for Eclipse"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.7">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7"> -->
@@ -1520,7 +1520,7 @@
             kind="task"
             license="Free, EPL"
             name="Pivotal tc Server Integration for Eclipse"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.8">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8"> -->
@@ -1544,7 +1544,7 @@
             kind="task"
             license="Free, EPL"
             name="Pivotal tc Server Integration for Eclipse"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.2">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2"> -->
@@ -1568,7 +1568,7 @@
             kind="task"
             license="Free, EPL"
             name="Pivotal tc Server Integration for Eclipse"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.3">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3"> -->
@@ -1592,7 +1592,7 @@
             kind="task"
             license="Free, EPL"
             name="Pivotal tc Server Integration for Eclipse"
-            provider="GoPivotal, Inc."
+            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
