STS-3927: Grails is provided by Pivotal, not Codehaus.

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -1289,7 +1289,7 @@
             groupId="bundled"
             license="Free, ASL"
             name="Grails (current production release)"
-            provider="Codehaus.org"
+            provider="Pivotal Software, Inc."
             siteUrl="http://download.springsource.com/release/TOOLS/extensions/sts360">
          <icon
                image32="images/grails_32.png">
