--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -610,6 +610,28 @@
       </connectorDescriptor>
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="This feature provides the Groovy 2.4 compiler for Groovy-Eclipse.  Once installed, the 2.4 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+            id="org.codehaus.groovy24.feature"
+            kind="task, document"
+            license="Free, EPL/ASL"
+            groupId="certified"
+            name="Groovy 2.4 Compiler for Groovy-Eclipse"
+            provider="Codehaus.org"
+            platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
+			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.3">
+<!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3"> -->
+<!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.3"> -->
+<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.3"> -->
+         <iu id="org.codehaus.groovy24.feature" />
+         <icon
+               image32="images/groovy_32.png"></icon>
+         <overview
+               summary="The Groovy 2.4 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+               url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+         </overview>
+      </connectorDescriptor>
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="This feature provides integration between Groovy-Eclipse and M2Eclipse. Only install this feature if you are using Groovy and Maven inside of STS"
             id="org.codehaus.groovy.m2eclipse.feature"
             kind="task, document"
@@ -697,6 +719,28 @@
                 image32="images/groovy_32.png"></icon>
           <overview
                 summary="The Groovy 2.3 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+                url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+          </overview>
+       </connectorDescriptor>
+       <connectorDescriptor
+             categoryId="com.springsource.sts.discovery-directory.framework.support"
+             description="This feature provides the Groovy 2.4 compiler for Groovy-Eclipse.  Once installed, the 2.4 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+             id="org.codehaus.groovy24.feature"
+             kind="task, document"
+             license="Free, EPL/ASL"
+             groupId="certified"
+             name="Groovy 2.4 Compiler for Groovy-Eclipse"
+             provider="Codehaus.org"
+             platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
+ 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
+ <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
+ <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.4"> -->
+ <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4"> -->
+          <iu id="org.codehaus.groovy24.feature" />
+          <icon
+                image32="images/groovy_32.png"></icon>
+          <overview
+                summary="The Groovy 2.4 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
                 url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
           </overview>
        </connectorDescriptor>
