--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -52,7 +52,7 @@
             description="A powerful application security tool that expertly pinpoints vulnerabilities such as SQL Injection and XSS using Contrast's award-winning instrumentation approach."
             id="com.contrastsecurity.eclipse"
             kind="task, document"
-	  		license="Commercial"
+	  		license="Free, Commercial"
             name="Contrast for Eclipse"
             provider="Contrast Security"
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.5.9))"
