updated extension install for 3.7.0.RC1 and updated groovy-eclipse to consume components from different update site

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -147,10 +147,7 @@
              name="Groovy-Eclipse"
              provider="Codehaus.org"
              platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
- 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
- <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
- <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.4"> -->
- <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4"> -->
+ 			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.4">
           <iu id="org.codehaus.groovy.eclipse.feature" />
           <iu id="org.codehaus.groovy.jdt.patch" />
           <icon
@@ -170,10 +167,7 @@
              name="Groovy 2.2 Compiler for Groovy-Eclipse"
              provider="Codehaus.org"
              platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
- 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
- <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
- <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.4"> -->
- <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4"> -->
+ 			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.4">
           <iu id="org.codehaus.groovy22.feature" />
           <icon
                 image32="images/groovy_32.png"></icon>
@@ -192,10 +186,7 @@
              name="Groovy 2.3 Compiler for Groovy-Eclipse"
              provider="Codehaus.org"
              platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
- 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
- <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
- <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.4"> -->
- <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4"> -->
+ 			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.4">
           <iu id="org.codehaus.groovy23.feature" />
           <icon
                 image32="images/groovy_32.png"></icon>
@@ -214,10 +205,7 @@
              name="Groovy 2.4 Compiler for Groovy-Eclipse"
              provider="Codehaus.org"
              platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
- 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
- <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
- <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.4"> -->
- <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4"> -->
+ 			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.4">
           <iu id="org.codehaus.groovy24.feature" />
           <icon
                 image32="images/groovy_32.png"></icon>
@@ -236,10 +224,7 @@
              name="Groovy-Eclipse Configurator for M2Eclipse"
              provider="Codehaus.org"
              platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
- 			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
- <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
- <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.4"> -->
- <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4"> -->
+ 			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.4">
           <iu id="org.codehaus.groovy.m2eclipse.feature" />
           <iu id="org.codehaus.groovy.jdt.patch" />
           <icon
@@ -249,6 +234,105 @@
                 url="http://groovy.codehaus.org/Groovy-Eclipse+compiler+plugin+for+Maven">
           </overview>
        </connectorDescriptor>
+
+       <!-- Groovy-Eclipse for Mars 4.5 -->
+        <connectorDescriptor
+              categoryId="com.springsource.sts.discovery-directory.framework.support"
+              description="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
+              id="org.codehaus.groovy.eclipse.feature"
+              kind="task, document"
+              license="Free, EPL/ASL"
+              groupId="certified"
+              name="Groovy-Eclipse"
+              provider="Codehaus.org"
+              platformFilter="(&amp;(platform.version&gt;=4.5.0)(platform.version&lt;=4.5.9))"
+  			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.5">
+           <iu id="org.codehaus.groovy.eclipse.feature" />
+           <iu id="org.codehaus.groovy.jdt.patch" />
+           <icon
+                 image32="images/groovy_32.png"></icon>
+           <overview
+                 summary="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
+                 url="http://groovy.codehaus.org/Eclipse+Plugin">
+           </overview>
+        </connectorDescriptor>
+        <connectorDescriptor
+              categoryId="com.springsource.sts.discovery-directory.framework.support"
+              description="This feature provides the Groovy 2.2 compiler for Groovy-Eclipse.  Once installed, the 2.2 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+              id="org.codehaus.groovy22.feature"
+              kind="task, document"
+              license="Free, EPL/ASL"
+              groupId="certified"
+              name="Groovy 2.2 Compiler for Groovy-Eclipse"
+              provider="Codehaus.org"
+              platformFilter="(&amp;(platform.version&gt;=4.5.0)(platform.version&lt;=4.5.9))"
+  			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.5">
+           <iu id="org.codehaus.groovy22.feature" />
+           <icon
+                 image32="images/groovy_32.png"></icon>
+           <overview
+                 summary="The Groovy 2.2 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+                 url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+           </overview>
+        </connectorDescriptor>
+        <connectorDescriptor
+              categoryId="com.springsource.sts.discovery-directory.framework.support"
+              description="This feature provides the Groovy 2.3 compiler for Groovy-Eclipse.  Once installed, the 2.3 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+              id="org.codehaus.groovy23.feature"
+              kind="task, document"
+              license="Free, EPL/ASL"
+              groupId="certified"
+              name="Groovy 2.3 Compiler for Groovy-Eclipse"
+              provider="Codehaus.org"
+              platformFilter="(&amp;(platform.version&gt;=4.5.0)(platform.version&lt;=4.5.9))"
+  			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.5">
+           <iu id="org.codehaus.groovy23.feature" />
+           <icon
+                 image32="images/groovy_32.png"></icon>
+           <overview
+                 summary="The Groovy 2.3 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+                 url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+           </overview>
+        </connectorDescriptor>
+        <connectorDescriptor
+              categoryId="com.springsource.sts.discovery-directory.framework.support"
+              description="This feature provides the Groovy 2.4 compiler for Groovy-Eclipse.  Once installed, the 2.4 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+              id="org.codehaus.groovy24.feature"
+              kind="task, document"
+              license="Free, EPL/ASL"
+              groupId="certified"
+              name="Groovy 2.4 Compiler for Groovy-Eclipse"
+              provider="Codehaus.org"
+              platformFilter="(&amp;(platform.version&gt;=4.5.0)(platform.version&lt;=4.5.9))"
+  			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.5">
+           <iu id="org.codehaus.groovy24.feature" />
+           <icon
+                 image32="images/groovy_32.png"></icon>
+           <overview
+                 summary="The Groovy 2.4 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+                 url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+           </overview>
+        </connectorDescriptor>
+        <connectorDescriptor
+              categoryId="com.springsource.sts.discovery-directory.framework.support"
+              description="This feature provides integration between Groovy-Eclipse and M2Eclipse. Only install this feature if you are using Groovy and Maven inside of STS"
+              id="org.codehaus.groovy.m2eclipse.feature"
+              kind="task, document"
+              license="Free, EPL"
+              groupId="certified"
+              name="Groovy-Eclipse Configurator for M2Eclipse"
+              provider="Codehaus.org"
+              platformFilter="(&amp;(platform.version&gt;=4.5.0)(platform.version&lt;=4.5.9))"
+  			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.5">
+           <iu id="org.codehaus.groovy.m2eclipse.feature" />
+           <iu id="org.codehaus.groovy.jdt.patch" />
+           <icon
+                 image32="images/groovy_32.png"></icon>
+           <overview
+                 summary="This feature provides the Groovy-Eclipse configurator for M2Eclipse"
+                 url="http://groovy.codehaus.org/Groovy-Eclipse+compiler+plugin+for+Maven">
+           </overview>
+        </connectorDescriptor>
       <!-- END Groovy-Eclipse -->
 
       <!-- BEGIN Grails-IDE -->
@@ -262,7 +346,7 @@
             name="Grails Support"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.7.0.RC1/e4.4">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.4"> -->
 <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4"> -->
@@ -290,7 +374,7 @@
             name="Gradle Support"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.7.0.RC1/e4.4">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.4"> -->
 <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4"> -->
@@ -313,7 +397,7 @@
             name="Gradle Support"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.5.0)(platform.version&lt;=4.5.9))"
-			siteUrl="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.7.0.RC1/e4.5">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.5"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.5"> -->
 <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.5"> -->
@@ -338,7 +422,7 @@
             name="Spring IDE"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.7.0.RC1/e4.4">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.4"> -->
 <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4"> -->
@@ -371,7 +455,7 @@
             name="Spring IDE"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.5.0)(platform.version&lt;=4.5.9))"
-			siteUrl="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.7.0.RC1/e4.5">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.5"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.5"> -->
 <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.5"> -->
@@ -406,7 +490,7 @@
             name="Spring IDE - Roo Extension"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.7.0.RC1/e4.4">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.4"> -->
 <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4"> -->
@@ -428,7 +512,7 @@
             name="Spring IDE - Roo Extension"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.5.0)(platform.version&lt;=4.5.9))"
-			siteUrl="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.7.0.RC1/e4.5">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.5"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.5"> -->
 <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.5"> -->
@@ -585,7 +669,7 @@
             name="Pivotal tc Server Integration for Eclipse"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.4.0)(platform.version&lt;=4.4.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.7.0.RC1/e4.4">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.4"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.4"> -->
 <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.4"> -->
@@ -608,7 +692,7 @@
             name="Pivotal tc Server Integration for Eclipse"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.5.0)(platform.version&lt;=4.5.9))"
-			siteUrl="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.7.0.RC1/e4.5">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.5"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.5"> -->
 <!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.5"> -->
