--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -735,19 +735,20 @@
             categoryId="com.springsource.sts.discovery-directory.runtimes"
             description="The integration supports application deployment and scaling, service bindings, and migration between Cloud spaces. Java 7 is required to install and run the integration."
             kind="task"
-            id="org.cloudfoundry.ide.eclipse.server"
+            id="org.eclipse.cft.server"
             license="Free, EPL"
             name="Cloud Foundry Integration for Eclipse"
             platformFilter="(com.springsource.sts.version&gt;=2.9.0)"
-            provider="Pivotal Software, Inc."
-            siteUrl="http://dist.springsource.com/release/TOOLS/cloudfoundry">
-         <iu id="org.cloudfoundry.ide.eclipse.server" />
+            provider="Eclipse, Inc."
+            siteUrl="http://download.springsource.com/release/TOOLS/cft/1.0.0.M2">
+         <iu id="org.eclipse.cft.server.core.feature" />
+         <iu id="org.eclipse.cft.server.ui.feature" />
          <icon
                image32="images/cloudfoundry_32.png">
          </icon>
          <overview
                summary="%cloudfoundry.description"
-               url="http://www.cloudfoundry.com">
+               url="http://www.cloudfoundry.org">
          </overview>
       </connectorDescriptor>
 <!--      <connectorDescriptor
